--- a/style/_betterize.scss
+++ b/style/_betterize.scss
@@ -2,7 +2,7 @@
 /// ------------------------------------------------------------------------- //
 /// betterize.less - Opinionated normalization, better cross-browser design - //
 /// @author Stephen M Irving -- <@metric_dev> ------------------------------- //
-/// @version 1.0.2 - 03/14/2024 --------------------------------------------- //
+/// @version 1.1.0 - 03/15/2024 --------------------------------------------- //
 /// ------------------------------------------------------------------------- //
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -17,7 +17,7 @@
 // 1. Set `box-sizing` to `inherit` while setting the inheritance root,
 //    which is the html element, to `box-sizing: border-box`. This is
 //    a much more intuitive default box-model than `content-box`.
-// 2. Setting `min-width: 0` here is a VERY opinionated decision. It can save
+// 2. Setting `min-width: 0` here is a *very* opinionated decision. It can save
 //    you a lot of time trying to figure out a ton of odd and unintuitive
 //    behavior, especially with flexbox, but it can also cause unexpected
 //    issues if you aren't aware it is here.
@@ -41,12 +41,14 @@
 
 //  1. Prevent horizontal scrolling from being possible and set vertical
 //     scrolling. If you want a page with no scrollbar at all change
-//     to `overflow: hidden`.
+//     to `overflow: hidden`. Setting it here combined with `overflow-x: clip`
+//     on the body will prevent the behavior from breaking when an element
+//     like a masthead / nav bar is set with `position: sticky`.
 //  2. Set the root element box-sizing, the universal selector will inherit.
-//  3. Improve consistency of default font in all browsers.
+//  3. Change default font family in all browsers.
 //  4. Set the default font size in an accessible way (such that a user
 //     can change the default size with the browser settings).
-//  5. Change the `line-height` to an opinionated default.
+//  5. Normalize default `line-height` across browsers.
 //  6. Set a new default for `overflow-wrap` on the root element since it
 //     is an inherited property.
 //  7. Allow the browser to automatically break words at appropriate hyphenation
@@ -65,23 +67,21 @@
 //     of a line of text to "hang" outside the line's content box, making the
 //     formatting look more aesthetically pleasing.
 // 13. Remove the blue tap box over buttons and links in some versions of
-//     WebKit browsers for touch-enabled devices.
+//     iOS browsers for touch-enabled devices.
 // 14. Prevent adjustments of font size after orientation changes in iOS.
+// 15. Setting @viewport causes scrollbars to overlap content in legacy Edge
+//     and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
 
 html {
   overflow: hidden scroll; // 1
   box-sizing: border-box; // 2
-  font-family: // 3
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
+  font-family:
     sans-serif,
     'Apple Color Emoji',
     'Segoe UI Emoji',
-    'Segoe UI Symbol';
+    'Segoe UI Symbol'; // 3
   font-size: 1em; // 4
-  line-height: 1.4; //5
+  line-height: 1.15; // 5
   overflow-wrap: break-word; // 6
   -webkit-hyphens: auto; // 7
   hyphens: auto; // 7
@@ -91,8 +91,9 @@ html {
   color-scheme: light dark; // 10
   scrollbar-gutter: stable; // 11
   hanging-punctuation: first last; // 12
-  -webkit-tap-highlight-color: transparent; // 13
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // 13
   -webkit-text-size-adjust: 100%; // 14
+  -ms-overflow-style: scrollbar; // 15
 }
 
 // If user does not have prefers-reduced-motion on in their OS settings,
@@ -112,35 +113,73 @@ html {
   }
 }
 
+// IE10+ doesn't honor `<meta name="viewport">` in some cases.
+
+@at-root {
+  @-ms-viewport {
+    width: device-width;
+  }
+}
+
+/// Normalize the color of the background and text when it is highlighted by
+/// selecting it with a mouse.
+///
 /// @todo - Customize the selection background and color to match your design.
 
 ::-moz-selection {
-  background: #345171;
+  background: hsl(211.48, 36.97%, 32.55%);
   color: #fff;
   text-shadow: none;
 }
 
 ::selection {
-  background: #345171;
+  background: hsl(211.48, 36.97%, 32.55%);
   color: #fff;
   text-shadow: none;
 }
 
+// 1. Remove the possibility of a horizontal scrollbar. Combined with the
+//    `overflow: hidden scroll` on the html element, it prevents this behavior
+//    without causing issues when a top level element is set to
+//    `position: sticky`.
+// 2. Force the body to always take up the whole screen.
+// 3. Remove the body margin in all browsers.
+// 4. Set a normal font-size default.
+// 5. Set an opionated line-height for other elements to inherit.
+// 6. Set an explicit `text-align: left` so that we can later use
+//    the `inherit` value.
+// 7. On devices with small screens (likely phone or tablet), set text-rendering
+//    to improve speed. On devices with larger screens (likely laptops and PCs),
+//    set text-rendering to improve legibility.
+// 8. Ensure finer text rendering on Mac OS systems.
+
 body {
-  overflow-x: clip;
-  min-height: 100vh;
-  min-height: 100dvh;
-  margin: 0;
-  font-size: 1rem;
-  text-rendering: optimizeSpeed;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
+  overflow-x: clip; // 1
+  min-height: 100vh; // 2
+  min-height: 100dvh; // 2
+  margin: 0; // 3
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol';
+  font-size: 1rem; // 4
+  line-height: 1.5; // 5
+  text-align: left; // 6
+  text-rendering: optimizeSpeed; // 7
+  -moz-osx-font-smoothing: grayscale; // 8
+  -webkit-font-smoothing: antialiased; // 8
 
   @media screen and (min-width: 80em) {
-    text-rendering: optimizeLegibility;
+    text-rendering: optimizeLegibility; // 7
   }
 }
 
+// Better balance blocks of text in headings, blockqutoes, and figure captions.
 // See: https://developer.chrome.com/docs/css-ui/css-text-wrap-balance
 
 h1,
@@ -154,23 +193,47 @@ figcaption {
   text-wrap: balance;
 }
 
-// Correct the font size and margin on <h1> elements within <section> and
-// <article> contexts in Chrome, Firefox, and Safari.
+// 1. Remove the top margin for easier control as it avoids margin collapse.
+// 2. Correct the font size <h1> elements within <section> and
+//    <article> contexts in Chrome, Firefox, and Safari.
 
 h1 {
-  margin: 0.67em 0;
+  margin: 0 0 0.67em;
   font-size: 2em;
 }
 
-// Limit the inline size of paragraphs to 95 characters.
-// Set text-wrap to pretty if possible.
+// Remove the top margin for easier control as it avoids margin collapse.
 
-p {
-  max-inline-size: 95ch;
-  text-wrap: pretty;
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
 }
 
-// Normalize bold and strong
+// 1. Limit the inline size of paragraphs to 92 characters.
+// 2. Remove the top margin to avoid margin collapse.
+// 3. Set text-wrap to pretty if possible.
+
+p {
+  max-inline-size: 92ch; // 1
+  margin-top: 0; // 2
+  text-wrap: pretty; // 3
+}
+
+// Remove the top margin for easier control as it avoids margin collapse.
+// Normalize the margins on all lists as well.
+
+blockquote,
+figure,
+dl,
+ol,
+ul {
+  margin: 0 0 1rem;
+}
+
+// Set a normalized font-weight for legacy Edge and older versions of Safari
 
 b,
 strong {
@@ -178,7 +241,7 @@ strong {
   line-height: inherit;
 }
 
-// Normalize small
+// Normalize small across browsers
 
 small {
   font-size: 80%;
@@ -204,13 +267,8 @@ sup {
   top: -0.5em;
 }
 
-// Correct the odd font size, inheritance, overflow and size scaling issues seen
-// in some browsers when using `code`, `kbd`, `pre`, and `samp`, and add
-// a better default font stock.
-
-pre {
-  overflow: auto;
-}
+// Correct the odd font inheritance and size scaling issues seen
+// in some browsers when using `code`, `kbd`, `pre`, and `samp`.
 
 pre,
 code,
@@ -220,18 +278,36 @@ samp {
   font-size: 1em;
 }
 
-address {
-  font-style: normal;
+// 1. Dont't allow content to break outside
+// 2. Remove top margin to avoid vertical margin collapse.
+// 3. Having @viewport set causes scrollbars to overlap content in legacy Edge
+// and IE11, so force a non-overlapping, non-auto-hiding scrollbar.
+
+pre {
+  overflow: auto; // 1
+  margin: 0 0 1rem; // 2
+  -ms-overflow-style: scrollbar; // 3
 }
 
+output {
+  display: inline-block;
+}
 
-// Remove the bottom border in Chrome 57- and add the correct text decoration
-// in Chrome, Edge, IE, Opera, and Safari.
+address {
+  margin-bottom: 1rem;
+  font-style: normal;
+  line-height: inherit;
+}
+
+// 1. Remove the bottom border in Chrome 57-
+// 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+// 3. Add explicit cursor to indicate behavior.
 
 abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
+  border-bottom: none; // 1
+  text-decoration: underline; // 2
+  text-decoration: underline dotted; // 2
+  cursor: help; // 3
 }
 
 // Render tables with collapsed borders and other improved defaults.
@@ -243,6 +319,20 @@ table {
   border-color: currentcolor;
   text-indent: 0;
   font-variant-numeric: tabular-nums;
+}
+
+// Matches default `<td>` alignment by inheriting from the `<body>`, or the
+// closest parent with a set `text-align`.
+
+th {
+  text-align: inherit;
+}
+
+caption {
+  padding: 0.75rem 0;
+  color: hsl(208.24, 7.3%, 45.69%);
+  caption-side: bottom;
+  text-align: inherit;
 }
 
 // A better looking horizontal rule that looks the same in all browsers
@@ -261,13 +351,18 @@ hr {
   color: inherit;
 }
 
-// Normalize the margins on all lists
+// Add the correct font style in Android 4.3-
 
-dl,
-ol,
-ul {
-  margin-top: 0;
-  margin-bottom: 1rem;
+dfn,
+cite {
+  font-style: italic;
+}
+
+// Undo browser default
+
+dd {
+  margin-bottom: 0.5rem;
+  margin-left: 0;
 }
 
 // Reset all list styles for <ol> and <ul> elements used in <nav> elements
@@ -322,7 +417,7 @@ dialog {
   border: solid;
   margin: auto;
   background-color: #fff;
-  color: #222;
+  color: #111;
 }
 
 // Ensures dialog elements without the 'open' attribute are not displayed and
@@ -341,17 +436,18 @@ template {
 ////////////////////////////////////////////////////////////////////////////////
 
 
-// Change the font styles correctly across browsers.
-// Remove the margins in Firefox and Safari.
+// 1. Remove the margins on controls in Firefox and Safari.
+// 2. Change the font styles on controls correctly across browsers.
 
 button,
 input,
 optgroup,
 select,
 textarea {
-  margin: 0;
-  font: inherit;
-  line-height: 1.15;
+  margin: 0; // 1
+  font-family: inherit; // 2
+  font-size: 100%; // 2
+  line-height: 1.15; // 2
 }
 
 // Fix the inconsistent default appearance across browsers.
@@ -362,7 +458,7 @@ select,
 textarea {
   padding: 0.25em 0.375em;
   border: 1px solid WindowFrame;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   color: inherit;
   letter-spacing: inherit;
 }
@@ -381,10 +477,12 @@ textarea,
   touch-action: manipulation;
 }
 
-// Ensure default cursor behavior on links
+// 1. Ensure default cursor behavior on links.
+// 2. Remove gaps in link underlines in iOS8+ and Safari 8+
 
 a {
   cursor: pointer;
+  -webkit-text-decoration-skip: objects;
 }
 
 // Show the overflow in legacy Edge (18-) and IE.
@@ -412,13 +510,17 @@ select {
   background: no-repeat right center / 1em;
 }
 
-// Correct the inability to style clickable types in iOS and Safari.
+// 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
+//    controls in Android 4.
+// 2. Remove the default `border-radius` that macOS Chrome adds.
+// 3. Correct the inability to style clickable types in iOS and Safari.
 
 button,
-[type='button'],
+html [type='button'], // 1
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button;
+  border-radius: 0; // 2
+  -webkit-appearance: button; // 3
 }
 
 // Remove the inner border and padding on focused buttons in Firefox.
@@ -434,7 +536,7 @@ button::-moz-focus-inner,
 input:disabled,
 select:disabled,
 textarea:disabled {
-  background-color: #e6e6e6;
+  background-color: hsl(0, 0%, 90.2%);
   cursor: not-allowed;
 }
 
@@ -442,6 +544,19 @@ textarea:disabled {
 [type='radio'] {
   box-sizing: border-box;
   padding: 0;
+}
+
+// Remove the default appearance of temporal inputs to avoid a Mobile Safari
+// bug where setting a custom line-height prevents text from being vertically
+// centered within the input.
+// See https://bugs.webkit.org/show_bug.cgi?id=139848
+// and https://github.com/twbs/bootstrap/issues/11266
+
+input[type='date'],
+input[type='time'],
+input[type='datetime-local'],
+input[type='month'] {
+  -webkit-appearance: listbox;
 }
 
 // Ensure the same default "down arrow" to indicate available options
@@ -459,12 +574,16 @@ textarea {
   resize: vertical;
 }
 
-// Fix the inconsistent border appearance across browsers
+// Reset fieldsets to make them behave more like a standard block element and
+// not negatively affect page layout.
+// See https://github.com/twbs/bootstrap/issues/12359
+// and https://html.spec.whatwg.org/multipage/#the-fieldset-and-legend-elements
 
 fieldset {
-  min-inline-size: min-content;
-  padding: 0.35em 0.75em 0.625em;
-  border: 2px groove #a0a0a0;
+  min-width: 0;
+  padding: 0;
+  border: 0;
+  margin: 0;
 }
 
 // Correct the text wrapping in Edge and IE and the color inheritance from
@@ -472,10 +591,14 @@ fieldset {
 // out when they zero out <fieldset> elements.
 
 legend {
-  display: table;
+  display: block;
+  width: 100%;
   max-width: 100%;
   padding: 0;
+  margin-bottom: 0.5rem;
   color: inherit;
+  font-size: 1.5rem;
+  line-height: inherit;
   white-space: normal;
 }
 
@@ -501,6 +624,14 @@ progress {
 :-moz-focusring {
   outline: 2px solid #000;
   outline-offset: 4px;
+}
+
+// Suppress the focus outline on elements that cannot be accessed via keyboard.
+// This prevents an unwanted focus outline from appearing around elements that
+// might still respond to pointer events.
+
+[tabindex='-1']:focus {
+  outline: 0 !important;
 }
 
 ::-webkit-input-placeholder {
@@ -547,11 +678,13 @@ progress {
   height: auto;
 }
 
-// Correct the appearance in Chrome and Safari and the outline style in Safari.
+// 1. Correct the appearance in Chrome and Safari.
+// 2. Correct the outline offset in Safari.
 
 [type='search'] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
+  -webkit-appearance: none; // 1
+  -webkit-appearance: textfield; // 1
+  outline-offset: -2px; // 2
 }
 
 // Remove the inner padding on search cancel buttons and search decorations in
@@ -586,8 +719,7 @@ video {
   height: auto;
 }
 
-// Remove the gap between audio, canvas, iframes, images, videos and the bottom
-// of their containers: https://github.com/h5bp/html5-boilerplate/issues/440
+// Change the alignment on media elements in all browsers.
 
 audio,
 canvas,
@@ -618,9 +750,18 @@ img {
   shape-margin: 1rem;
 }
 
+// Remove the border on iframes in all browsers.
+
 iframe {
   border: 0;
 }
+
+summary {
+  display: list-item;
+  cursor: pointer;
+}
+
+// Add the correct display in Safari.
 
 :where(details > summary:first-of-type) {
   display: list-item;
@@ -644,6 +785,8 @@ svg:not([fill]) {
 ////////////////////////////////////////////////////////////////////////////////
 
 
+// Change the cursor on busy elements in all browsers (opinionated).
+
 [aria-busy='true'] {
   cursor: progress;
 }
@@ -652,10 +795,15 @@ svg:not([fill]) {
   cursor: pointer;
 }
 
+// Change the cursor on disabled, not-editable, or otherwise
+// inoperable elements in all browsers.
+
 [aria-disabled='true'],
 [disabled] {
   cursor: not-allowed;
 }
+
+/* Change the display on visually hidden accessible elements */
 
 [aria-hidden='false'][hidden] {
   display: initial;
